# IpsCMakeModules

./: CMakeLists.txt  IpsCMakeModules.pc.in  IpsCMakeModulesConfig.in  LICENSE  README.md  ips_add_target.cmake  ips_detect_errors.cmake  ips_fetch.cmake  ips_init.cmake  ips_utils.cmake
