cmake_minimum_required(VERSION 3.2)
project(IpsCMakeModules VERSION 1.0.1)

set(IPS_CMAKEMODULES_INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
set(IPS_CMAKEMODULES_CONFIG_FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake")

include(CMakePackageConfigHelpers)
configure_package_config_file(
        ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}Config.in
        ${IPS_CMAKEMODULES_CONFIG_FILE}
        INSTALL_DESTINATION ${IPS_CMAKEMODULES_INSTALL_DESTINATION})

file(GLOB _IPS_CMAKE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cmake)
if (NOT ips-cmake-modules_POPULATED)
    install(FILES ${_PROTEI_CMAKE_FILES}
            DESTINATION ${IPS_CMAKEMODULES_INSTALL_DESTINATION})
    install(FILES ${IPS_CMAKEMODULES_CONFIG_FILE} ${IPS_CMAKEMODULES_VERSION_FILE}
            DESTINATION ${IPS_CMAKEMODULES_INSTALL_DESTINATION})
else()
    foreach(_IPS_CMAKE_FILE ${_IPS_CMAKE_FILES})
        get_filename_component(_IPS_FILENAME_ONLY ${_IPS_CMAKE_FILE} NAME)
        configure_file(${_IPS_CMAKE_FILE}
                ${CMAKE_CURRENT_BINARY_DIR}/${_IPS_FILENAME_ONLY} COPYONLY)
    endforeach()

    set(${PROJECT_NAME}_CONFIG_DIR "${CMAKE_CURRENT_BINARY_DIR}" PARENT_SCOPE CACHE PATH "")
endif()

